add minRelevancy filter. use PerTaskExecutor to fix loose thread bug